# posto

./: LICENSE  README.md  SPEC.md  posto.cabal  stack.yaml
app/: Main.hs
lib/: Posto.hs
lib/Posto/: Config.hs
