name:                posto
version:             0.1.0.0
synopsis:            Console-based mail client
description:
  Posto is a simple-ish mail client. I wrote it because <alpine
  https://www.washington.edu/alpine/> doesn't have great encryption support, and
  <mutt http://www.mutt.org/> is too complicated.
homepage:            https://github.com/pharpend/posto
bug-reports:         https://github.com/pharpend/posto/issues
license:             ISC
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2016, Peter Harpending
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/pharpend/posto.git

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall
  default-extensions:
    DeriveGeneric
    OverloadedStrings
  build-depends:
      base ==4.8.*
    , aeson
    , bytestring
    , text
    , unordered-containers
    , vector
    , yaml
  exposed-modules:
    Posto
    Posto.Config

executable posto
  main-is:          Main.hs
  hs-source-dirs:   bin
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  default-extensions:
    OverloadedStrings
    TemplateHaskell
  other-modules:
    Paths_posto
  build-depends:
      posto
    , base ==4.8.*
    , bytestring
    , file-embed
    , optparse-applicative
    , optparse-helper
    , optparse-simple
    , text
