name:                posto
version:             0.1.0.0
synopsis:            Console-based mail client
description:         Console-based mail client designed to be simple to use.
homepage:            https://github.com/pharpend/posto
bug-reports:         https://github.com/pharpend/posto/issues
license:             BSD-2
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter.harpending@utah-edu
copyright:           Copyright (c) 2016-2017, Peter Harpending
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  LICENSE
                     README.md
                     ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/pharpend/posto.git

executable posto
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
  default-extensions:
    DeriveGeneric
    OverloadedStrings
    TemplateHaskell
  build-depends:      base >=4.7 && <5
                     ,aeson
                     ,haskeline
                     ,imap
                     ,text
                     ,yaml
